derive/tests/ui/pubsub/attr-neither-subscribe-or-unsubscribe.stderr
error: pubsub attribute not annotated with either subscribe or unsubscribe
  --> $DIR/attr-neither-subscribe-or-unsubscribe.rs:10:2
   |
10 |       /// Hello subscription
   |  _____^
11 | |     #[pubsub(subscription = "hello", name = "hello_subscribe", alias("hello_sub"))]
12 | |     fn subscribe(&self, _: Self::Metadata, _: typed::Subscriber<String>, _: u64);
   | |_________________________________________________________________________________^

error: aborting due to previous error

